# truth-or-dare-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  (+3 more)
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  truthordare_sdk.py  truthordare_types.py
py/core/: error.py  helpers.py  response.py
py/entity/: dare_entity.py  nhie_entity.py  paranoia_entity.py  truth_entity.py  wyr_entity.py
py/feature/: cache_feature.py  clienttrack_feature.py  debug_feature.py  idempotency_feature.py  metrics_feature.py  netsim_feature.py  proxy_feature.py  ratelimit_feature.py  rbac_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_dare_direct.py  test_dare_entity.py  test_exists.py  test_netsim.py  test_nhie_direct.py  test_nhie_entity.py  test_paranoia_direct.py  test_paranoia_entity.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_truth_direct.py  test_truth_entity.py  test_wyr_direct.py  test_wyr_entity.py
py/utility/: done.py  feature_add.py  feature_hook.py  fetcher.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_auth.py  prepare_body.py  prepare_params.py  register.py  result_body.py  result_headers.py  transform_request.py
(+503 files in other folders)
